src/objects/InvoiceLineCommissions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InvoiceLine_ED__c</fullName>
        <label>InvoiceLine_ED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceLine_SD__c</fullName>
        <label>InvoiceLine_SD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderLegalEntity__c</fullName>
        <label>OrderLegalEntity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>InvoiceLineCommissions</label>
</CustomObject>